# urs_phase_transitions

./: .gitignore  LICENSE  README.md
RQ1_graphs/: correlations.py  dist.py  distribution.py  figure1.py  run.py  sw-correlations.py
RQ1_graphs/c15/: r75k3q0.3c15_mcTw.csv  r75k3q0.3c15_ug3.csv  r75k3q0.5c15_d4.csv  r75k3q0.6c15_sharpSAT.csv  r75k3q0.8c15_mod.csv  r75k3q0.8c15_sharpSAT.csv
RQ1_graphs/c5/: r75k3q0.3c5_cls.csv  r75k3q0.3c5_mcTw.csv  r75k3q0.3c5_spur.csv  r75k3q0.4c5_cls.csv  r75k3q0.4c5_mcTw.csv  r75k3q0.5c5_cls.csv  r75k3q0.5c5_sharpSAT.csv  r75k3q0.5c5_spur.csv  r75k3q0.5c5_ug3.csv  r75k3q0.6c5_cls.csv  r75k3q0.6c5_spur.csv  r75k3q0.7c5_cls.csv  r75k3q0.7c5_d4.csv  r75k3q0.7c5_mc.csv  r75k3q0.7c5_spur.csv  r75k3q0.7c5_ug3.csv  r75k3q0.8c5_sharpSAT.csv  r75k3q0.8c5_ug3.csv
RQ1_graphs/c8/: r75k3q0.3c8_mcTw.csv  r75k3q0.3c8_mod.csv  r75k3q0.4c8_d4.csv  r75k3q0.5c8_d4.csv  r75k3q0.5c8_mcTw.csv  (+7 more)
RQ2_graphs/: base.py  correlation.py  dist.py  distribution.py  distribution_b.py  mse.py  run.py
RQ3_graphs/: base.py  base_r.py  cdf.py  cdf_r.py  dist.py  run.py
RQ4_graphs/: run.py
cnf_to_lp/: CMakeLists.txt  Makefile  cnf_to_lp.def
cnf_to_lp/src/: main.cpp
community/: README.md  gen.sh
lpa/: Makefile  README.md  modularity.def
mod_correlation/: run.py
scripts/: cls.sh  collect.sh  modul.sh  stats.sh  subformula.sh
singularity/: Makefile  README.md  d4.def  mcTw.def  mctw.def  sharpSAT  sharpSAT.def  spur.def  unigen3.def
smp/: Makefile  smp.def
spur_mod_vs_patoh_split/: test.py
sub/: Makefile  sub.def
time/: test.py
var_q/: hist.py
(+205 files in other folders)
